clusters/home/webdev/gamemanager-backend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gamesmanager-backend
    app.kubernetes.io/instance: gamesmanager-backend
    app.kubernetes.io/name: gamesmanager-backend
  name: gamesmanager-backend
  namespace: webdev
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gamesmanager-backend
  template:
    metadata:
      labels:
        app: gamesmanager-backend
        app.kubernetes.io/name: gamesmanager-backend
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - image: directus/directus:10
        name: gamesmanager-backend
        ports:
        - containerPort: 8055
          hostPort: 8055
          protocol: TCP
        volumeMounts:
        - mountPath: "/directus/uploads"
          readOnly: false
          name: data
          subPath: "uploads"
        - mountPath: "/directus/database"
          readOnly: false
          name: data
          subPath: "database"
        - mountPath: "/directus/extensions"
          readOnly: false
          name: data
          subPath: "extensions"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gamesmanager-backend
