clusters/home/webdev/gamemanager-backend/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gamesmanager-backend
  name: gamesmanager-backend
  namespace: webdev
spec:
  ports:
  - name: "web"
    port: 8055
    targetPort: 8055
  selector:
    app: gamesmanager-backend
