clusters/home/webdev/gamemanager-backend/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gamesmanager-backend
  namespace: webdev
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gamesdb.f9.casa`)
      kind: Rule
      services:
        - name: gamesmanager-backend
          port: 8055
      middlewares:
        - name: default-headers
          namespace: default
